--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div >You don't have account? <a href="./views/register/index.html">Register Now</a></div>
         
     </div>
+    <script src="./helpers/constants.js"></script>
     <script src="./helpers/utils.js"></script>
     <script src="./script.js"></script>
 </body>
